force-app/main/default/objects/Visit/fields/Actual_GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Actual_GPS_Latitude__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Latitude (Captured)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>