force-app/main/default/objects/Visit/fields/PlannedVisitStartTime__c.field-meta.xml
<CustomField>
    <fullName>PlannedVisitStartTime__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Scheduled or actual start time of the store visit</inlineHelpText>
    <label>Visit Date</label>
    <type>DateTime</type>
</CustomField>