force-app/main/default/objects/Visit/fields/Site_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_Photo_URL__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Site Photo URL</label>
    <type>Url</type>
</CustomField>