force-app/main/default/objects/Visit/fields/WhatsApp_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Thread_ID__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>WhatsApp Thread ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>