force-app/main/default/objects/Visit/recordTypes/Expansion_Site_Survey.recordType-meta.xml
<RecordType>
    <fullName>Expansion_Site_Survey</fullName>
    <active>true</active>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Expansion Site Survey</label>
</RecordType>